# for display continuity sake please use 2 spaces instead of tabs

2014-09-21 mmichaud <m.michael.michaud@orange.fr>
  * Add DissolvePlugIn able to dissolve according to several attributes

2014-09-20 mmichaud <m.michael.michaud@orange.fr>
  * DeleteDuplicateGeometries save deleted features in another layer

2014-09-17 mmichaud <m.michael.michaud@orange.fr>
  * DeleteDuplicateGeometries now works also with empty geometries

2014-09-13 mmichaud <m.michael.michaud@orange.fr>
  * Fix #374 : PasteItemsPlugIn did not set target SRIDStyle to pasted items

2014-08-28 ede
  * limit 32bit jre xmx to 2GiB for compatibility reasons, osgeo's lubuntu 
    32bit kernel with pae and openjdk 7 couldnt start OJ

2014-08-02 ede
  * fix fail to startup on ubuntu 12.04 with openjdk java version "1.6.0_31"; 
    OpenJDK Runtime Environment (IcedTea6 1.13.3) 
    (6b31-1.13.3-1ubuntu1~0.12.04.2); OpenJDK 64-Bit Server VM (build 
    23.25-b01, mixed mode); error was
      java.lang.IllegalAccessError: tried to access class java.awt.
      GraphicsDevice$WindowTranslucency from class com.vividsolutions.
      jump.workbench.ui.GUIUtil

2014-07-22 mmichaud <m.michael.michaud@orange.fr>
  * improve the way to guess AttributeType in JoinTableDataSourceCSV

2014-07-17 mmichaud <m.michael.michaud@orange.fr>
  * graph-toolbox and csv-driver have been updated in PLUS distribution

2014-07-15  mmichaud <m.michael.michaud@orange.fr>
  * Display date/times with a default 24h format, instead of 12h

2014-07-14  mmichaud <m.michael.michaud@orange.fr>
  * Add an option in SaveToPostGIS driver and WritableDataStoreDataSource
    framework to write normalized lower case column names (see FR #206)

2014-07-09  mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #372 can't write a table with an old gid if "Create a primary
    key column" is unchecked

2014-07-01 mmichaud <m.michael.michaud@orange.fr>
  * Improve copy/paste style behaviour while copying from/to
    ReferencedImageLayer